attempted to fix links
please save me

--- a/home.html
+++ b/home.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="files/styling.css">
-    <script src="files/scripts.js"></script>
+    <link rel="stylesheet" href="./files/styling.css">
+    <script src="./files/scripts.js"></script>
 
     <title>Faction Hub Titles</title>
 </head>
@@ -15,27 +15,27 @@
         <div id="factionCheckTitle">Please select the correct faction:</div>
         <div id="buttonGrid">
 
-            <a href="files/sereiteiTitles.html" style="text-decoration: none; color: inherit;">
+            <a href="./files/sereiteiTitles.html" style="text-decoration: none; color: inherit;">
                 <div class="factionSelectButton">
-                    <img src="files/images/sereiteiLogo.png" alt="Faction" />
+                    <img src="./files/images/sereiteiLogo.png" alt="Faction" />
                 </div>
             </a>
 
-            <a href="files/huecoTitles.html" style="text-decoration: none; color: inherit;">
+            <a href="./files/huecoTitles.html" style="text-decoration: none; color: inherit;">
                 <div class="factionSelectButton">
-                    <img src="files/images/huecoLogo.png" alt="Faction" />
+                    <img src="./files/images/huecoLogo.png" alt="Faction" />
                 </div>
             </a>
 
-            <a href="files/wandenTitles.html" style="text-decoration: none; color: inherit;">
+            <a href="./files/wandenTitles.html" style="text-decoration: none; color: inherit;">
                 <div class="factionSelectButton">
-                    <img src="files/images/wandenreichLogo.png" alt="Faction" />
+                    <img src="./files/images/wandenreichLogo.png" alt="Faction" />
                 </div>
             </a>
 
-            <a href="files/fullbringTitles.html" style="text-decoration: none; color: inherit;">
+            <a href="./files/fullbringTitles.html" style="text-decoration: none; color: inherit;">
                 <div class="factionSelectButton">
-                    <img src="files/images/fullbringLogo.png" alt="Faction" />
+                    <img src="./files/images/fullbringLogo.png" alt="Faction" />
                 </div>
             </a>
                         <!-- <div class="factionSelectButton">Hell</div> -->
