--- a/files/sereiteiTitles.html
+++ b/files/sereiteiTitles.html
@@ -20,35 +20,35 @@
             <h1>Select a Font Style: </h1>
             <select id="fontSelect">
                 <option class="roboto" value="Roboto">Roboto</option>
-                <option class="roboto-condensed" value="Roboto Condensed">Roboto Condensed</option>
-                <option class="roboto-mono" value="Roboto Mono">Roboto Mono</option>
+                <option class="roboto-condensed" value="RobotoCondensed">Roboto Condensed</option>
+                <option class="roboto-mono" value="RobotoMono">Roboto Mono</option>
                 <option class="oswald" value="Oswald">Oswald</option>
                 <option class="merriweather" value="Merriweather">Merriweather</option>
                 <option class="ubuntu" value="Ubuntu">Ubuntu</option>
                 <option class="nunito" value="Nunito">Nunito</option>
-                <option class="indie-flower" value="Indie Flower">Indie Flower</option>
+                <option class="indie-flower" value="IndieFlower">Indie Flower</option>
                 <option class="bangers" value="Bangers">Bangers</option>
-                <option class="amatic-sc" value="Amatic SC">Amatic SC</option>
-                <option class="permanent-marker" value="Permanent Marker">Permanent Marker</option>
-                <option class="patrick-hand" value="Patrick Hand">Patrick Hand</option>
+                <option class="amatic-sc" value="AmaticSC">Amatic SC</option>
+                <option class="permanent-marker" value="PermanentMarker">Permanent Marker</option>
+                <option class="patrick-hand" value="PatrickHand">Patrick Hand</option>
                 <option class="jura" value="Jura">Jura</option>
-                <option class="josefin-sans" value="Josefin Sans">Josefin Sans</option>
-                <option class="grenze-gothic" value="Grenze Gothic">Grenze Gothic</option>
-                <option class="fredoka-one" value="Fredoka One">Fredoka One</option>
+                <option class="josefin-sans" value="JosefinSans">Josefin Sans</option>
+                <option class="grenze-gothic" value="GrenzeGothic">Grenze Gothic</option>
+                <option class="fredoka-one" value="FredokaOne">Fredoka One</option>
                 <option class="fondamento" value="Fondamento">Fondamento</option>
-                <option class="deja-vu-mono" value="DejaVu Mono">DejaVu Mono</option>
+                <option class="deja-vu-mono" value="DejaVuMono">DejaVu Mono</option>
                 <option class="creepster" value="Creepster">Creepster</option>
                 <option class="kalam" value="Kalam">Kalam</option>
-                <option class="luckiest-guy" value="Luckiest Guy">Luckiest Guy</option>
-                <option class="titillium-web" value="Titillium Web">Titillium Web</option>
-                <option class="special-elite" value="Special Elite">Special Elite</option>
+                <option class="luckiest-guy" value="LuckiestGuy">Luckiest Guy</option>
+                <option class="titillium-web" value="TitilliumWeb">Titillium Web</option>
+                <option class="special-elite" value="SpecialElite">Special Elite</option>
                 <option class="sarpanch" value="Sarpanch">Sarpanch</option>
-                <option class="source-sans-pro" value="Source Sans Pro">Source Sans Pro</option>
+                <option class="source-sans-pro" value="SourceSansPro">Source Sans Pro</option>
                 <option class="gotham" value="Gotham">Gotham</option>
-                <option class="eb-garamond" value="EB Garamond">EB Garamond</option>
-                <option class="bodoni-moda" value="Bodoni Moda">Bodoni Moda</option>
+                <option class="eb-garamond" value="EBGaramond">EB Garamond</option>
+                <option class="bodoni-moda" value="BodoniModa">Bodoni Moda</option>
                 <option class="cinzel" value="Cinzel">Cinzel</option>
-                <option class="cinzel-decorative" value="Cinzel Decorative">Cinzel Decorative</option>
+                <option class="cinzel-decorative" value="CinzelDecorative">Cinzel Decorative</option>
             </select>
 
             <h1>Select Rank:</h1>
