--- a/files/sereiteiTitles.html
+++ b/files/sereiteiTitles.html
@@ -16,38 +16,10 @@
         <form>
             <h1>Enter Your Name: </h1>
             <input type="text" id="nameInput" placeholder="Enter your name" />
-
-            <h1>Select a Font Style: </h1>
+            
+            <h1>Font:</h1>
             <select id="fontSelect">
                 <option class="roboto-condensed" value="RobotoCondensed">Roboto Condensed</option>
-                <option class="roboto-mono" value="RobotoMono">Roboto Mono</option>
-                <option class="oswald" value="Oswald">Oswald</option>
-                <option class="merriweather" value="Merriweather">Merriweather</option>
-                <option class="ubuntu" value="Ubuntu">Ubuntu</option>
-                <option class="nunito" value="Nunito">Nunito</option>
-                <option class="indie-flower" value="IndieFlower">Indie Flower</option>
-                <option class="bangers" value="Bangers">Bangers</option>
-                <option class="amatic-sc" value="AmaticSC">Amatic SC</option>
-                <option class="permanent-marker" value="PermanentMarker">Permanent Marker</option>
-                <option class="patrick-hand" value="PatrickHand">Patrick Hand</option>
-                <option class="jura" value="Jura">Jura</option>
-                <option class="josefin-sans" value="JosefinSans">Josefin Sans</option>
-                <option class="grenze-gotisch" value="GrenzeGotisch">Grenze Gotisch</option>
-                <option class="fredoka-one" value="FredokaOne">Fredoka One</option>
-                <option class="fondamento" value="Fondamento">Fondamento</option>
-                <option class="deja-vu-mono" value="DejaVuMono">DejaVu Mono</option>
-                <option class="creepster" value="Creepster">Creepster</option>
-                <option class="kalam" value="Kalam">Kalam</option>
-                <option class="luckiest-guy" value="LuckiestGuy">Luckiest Guy</option>
-                <option class="titillium-web" value="TitilliumWeb">Titillium Web</option>
-                <option class="special-elite" value="SpecialElite">Special Elite</option>
-                <option class="sarpanch" value="Sarpanch">Sarpanch</option>
-                <option class="source-sans-pro" value="SourceSansPro">Source Sans Pro</option>
-                <option class="gotham" value="Gotham">Gotham</option>
-                <option class="eb-garamond" value="EBGaramond">EB Garamond</option>
-                <option class="bodoni-moda" value="BodoniModa">Bodoni Moda</option>
-                <option class="cinzel" value="Cinzel">Cinzel</option>
-                <option class="cinzel-decorative" value="CinzelDecorative">Cinzel Decorative</option>
             </select>
 
             <h1>Select Rank:</h1>
