added 13th division

--- a/files/sereiteiTitles.html
+++ b/files/sereiteiTitles.html
@@ -77,6 +77,7 @@
                     <option value="10th">10th</option>
                     <option value="11th">11th</option>
                     <option value="12th">12th</option>
+                    <option value="13th">13th</option>
                 </select>
             </div>
 
