Updated wanden titles

--- a/files/wandenTitles.html
+++ b/files/wandenTitles.html
@@ -66,22 +66,22 @@
             <div id="schutzContainer" style="display: none;">
                 <h1>Choose Schutzstaffel Rank:</h1>
                 <select id="schutzSelect">
-                    <option value="Archangel Michael">Archangel Michael</option>
-                    <option value="Archangel Gabriel">Archangel Gabriel</option>
-                    <option value="Archangel Raphael">Archangel Raphael</option>
-                    <option value="Archangel Uriel">Archangel Uriel</option>
+                    <option value="The Primal War">The Primal War</option>
+                    <option value="The Sacred War">The Sacred War</option>
+                    <option value="The Silent War">The Silent War</option>
+                    <option value="The Hidden War">The Hidden War</option>
                 </select>
             </div>
             
             <div id="jagContainer" style="display: none;">
                 <h1>Choose Jagdarmee Rank:</h1>
                 <select id="jagSelect">
-                    <option value="#1 Der Jagdkommandant">#1 Der Jagdkommandant</option>
-                    <option value="#2 Der Jagdhenker">#2 Der Jagdhenker</option>
-                    <option value="#3 Der Jagdschütze">#3 Der Jagdschütze</option>
-                    <option value="#4 Der Jagdspäher">#4 Der Jagdspäher</option>
-                    <option value="#5 Der Jagdzwinger">#5 Der Jagdzwinger</option>
-                    <option value="#6 Der Jagdreißer">#6 Der Jagdreißer</option>
+                    <option value="Der Jagdkommandant">Der Jagdkommandant</option>
+                    <option value="Der Jagdhenker">Der Jagdhenker</option>
+                    <option value="Der Jagdschütze">Der Jagdschütze</option>
+                    <option value="Der Jagdspäher">Der Jagdspäher</option>
+                    <option value="Der Jagdzwinger">Der Jagdzwinger</option>
+                    <option value="Der Jagdreißer">Der Jagdreißer</option>
                 </select>
             </div>
 
