--- a/home.html
+++ b/home.html
@@ -38,7 +38,13 @@
                     <img src="./files/images/fullbringLogo.png" alt="Faction" />
                 </div>
             </a>
-                        <!-- <div class="factionSelectButton">Hell</div> -->
+            
+            <!-- <a href="./files/hellTitles.html" style="text-decoration: none; color: inherit;">
+                <div class="factionSelectButton">
+                    <img src="./files/images/hellLogo.png" alt="Faction" />
+                </div>
+            </a> -->
+
         </div>
     </div>
 
