--- a/files/wandenTitles.html
+++ b/files/wandenTitles.html
@@ -76,12 +76,25 @@
             <div id="jagContainer" style="display: none;">
                 <h1>Choose Jagdarmee Rank:</h1>
                 <select id="jagSelect">
-                    <option value="Der Jagdkommandant">Der Jagdkommandant</option>
                     <option value="Der Jagdhenker">Der Jagdhenker</option>
-                    <option value="Der Jagdschütze">Der Jagdschütze</option>
-                    <option value="Der Jagdspäher">Der Jagdspäher</option>
+                    <option value="Der Jagdschütze">Der jagdschütze</option>
                     <option value="Der Jagdzwinger">Der Jagdzwinger</option>
-                    <option value="Der Jagdreißer">Der Jagdreißer</option>
+                    <option value="Der Jagdfänger">Der Jagdfänger</option>
+                    <option value="Der Jagdfluch">Der Jagdfluch</option>
+                    <option value="Der Jagdspäher">Der Jagdspäher</option>
+                    <option value="Der Jagdpanzer">Der Jagdpanzer</option>
+                    <option value="Der Jagdspeer">Der Jagdspeer</option>
+                    <option value="Der Jagdwächter">Der Jagdwächter</option>
+                </select>
+            </div>
+
+            <div id="komContainer" style="display: none;">
+                <h1>Choose Kommandant Rank:</h1>
+                <select id="komSelect">
+                    <option value=""></option>
+                    <option value=""></option>
+                    <option value=""></option>
+                    <option value=""></option>
                 </select>
             </div>
 
