added the base for kommandant

--- a/files/wandenTitles.html
+++ b/files/wandenTitles.html
@@ -26,6 +26,7 @@
             <select id="rankSelect">
                 <option value="schutzstaffel">Schutzstaffel</option>
                 <option value="sternritter">Sternritter</option>
+                <option value="kommandant">Kommandant</option>
                 <option value="jagdarmee">Jagdarmee</option>
                 <option value="wachritter">Wachritter</option>
             </select>
@@ -77,7 +78,7 @@
                 <h1>Choose Jagdarmee Rank:</h1>
                 <select id="jagSelect">
                     <option value="Der Jagdhenker">Der Jagdhenker</option>
-                    <option value="Der Jagdschütze">Der jagdschütze</option>
+                    <option value="Der Jagdschütze">Der Jagdschütze</option>
                     <option value="Der Jagdzwinger">Der Jagdzwinger</option>
                     <option value="Der Jagdfänger">Der Jagdfänger</option>
                     <option value="Der Jagdfluch">Der Jagdfluch</option>
@@ -91,7 +92,7 @@
             <div id="komContainer" style="display: none;">
                 <h1>Choose Kommandant Rank:</h1>
                 <select id="komSelect">
-                    <option value=""></option>
+                    <option value="Apex Jagkommandant">Apex Jagkommandant</option>
                     <option value=""></option>
                     <option value=""></option>
                     <option value=""></option>
