added the kommandants

--- a/files/wandenTitles.html
+++ b/files/wandenTitles.html
@@ -92,10 +92,10 @@
             <div id="komContainer" style="display: none;">
                 <h1>Choose Kommandant Rank:</h1>
                 <select id="komSelect">
-                    <option value="Apex Jagkommandant">Apex Jagkommandant</option>
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
+                    <option value="Der Kriegsherr">Der Kriegsherr</option>
+                    <option value="Der Blutrichter">Der Blutrichter</option>
+                    <option value="Der Schattenfürst">Der Schattenfürst</option>
+                    <option value="Der Todbringer">Der Todbringer</option>
                 </select>
             </div>
 
