added monarch of shadows and archon of tyranny

--- a/files/hellTitles.html
+++ b/files/hellTitles.html
@@ -32,6 +32,7 @@
             <div id="archonContainer" style="display: none;">
                 <h1>Select Archon rank:</h1>
                 <select id="archonRankSelect">
+                    <option value="Archon of Tyranny">Archon of Tyranny</option>
                     <option value="Archon of Flesh and Blood">Archon of Flesh and Blood</option>
                     <option value="Archon of Shattered Skies">Archon of Shattered Skies</option>
                     <option value="Archon of The Pale Ember">Archon of The Pale Ember</option>
@@ -45,6 +46,7 @@
             <div id="monarchContainer" style="display: none;">
                 <h1>Choose Monarch Rank:</h1>
                 <select id="monarchSelect">
+                    <option value="Monarch of Shadows">Monarch of Shadows</option>
                     <option value="Monarch of Transfiguration">Monarch of Transfiguration</option>
                     <option value="Monarch of Destruction">Monarch of Destruction</option>
                     <option value="Monarch of The White Flames">Monarch of The White Flames</option>
