added Gladius Domini

--- a/files/fullbringTitles.html
+++ b/files/fullbringTitles.html
@@ -47,6 +47,7 @@
             <div id="dominusContainer" style="display: none;">
                 <h1>Choose Dominus Rank:</h1>
                 <select id="dominusSelect">
+                    <option value="Gladius Domini">Gladius Domini</option>
                     <option value="[ 星の主 ] Dominus Stellarum">[ 星の主 ] Dominus Stellarum</option>
                     <option value="[ 風の主 ] Dominus Ventus">[ 風の主 ] Dominus Ventus</option>
                     <option value="[ 海の主 ] Dominus Maria">[ 海の主 ] Dominus Maria</option>
