--- a/files/fullbringTitles.html
+++ b/files/fullbringTitles.html
@@ -33,6 +33,7 @@
             <div id="custodesContainer" style="display: none;">
                 <h1>Select Custodes rank:</h1>
                 <select id="custodesRankSelect">
+                    <option value="[主の剣] Gladius Domini">[主の剣] Gladius Domini</option>
                     <option value="[ 日 ] Custos Solis">[ 日 ] Custos Solis</option>
                     <option value="[ 月 ] Custos Luna">[ 月 ] Custos Luna</optiovenn>
                     <option value="[ 空 ] Custos Aeris">[ 空 ] Custos Aeris</option>
@@ -47,7 +48,6 @@
             <div id="dominusContainer" style="display: none;">
                 <h1>Choose Dominus Rank:</h1>
                 <select id="dominusSelect">
-                    <option value="Gladius Domini">Gladius Domini</option>
                     <option value="[ 星の主 ] Dominus Stellarum">[ 星の主 ] Dominus Stellarum</option>
                     <option value="[ 風の主 ] Dominus Ventus">[ 風の主 ] Dominus Ventus</option>
                     <option value="[ 海の主 ] Dominus Maria">[ 海の主 ] Dominus Maria</option>
