fixed manifestation typo

--- a/files/fullbringTitles.html
+++ b/files/fullbringTitles.html
@@ -68,7 +68,7 @@
             </div>
 
             <div id="manifestationContainer" style="display: none;">
-                <h1>Chhoose Full Manifestation Artist Rank:</h1>
+                <h1>Choose Full Manifestation Artist Rank:</h1>
                 <select id="manifestationSelect">
                     <option value="<br/>001 | Kūgo Ginjō">Kūgo Ginjō</option>
                     <option value="<br/>002 | Tsukishima Shūkurō">Tsukishima Shūkurō</option>
