--- a/files/hellTitles.html
+++ b/files/hellTitles.html
@@ -15,7 +15,7 @@
         <a href="../home.html"><h1>Back</h1></a>
         <form>
             <h1>Enter Your Name: </h1>
-            <input type="text" id="nameInput" placeholder="Enter your name" />
+            <input type="text" id="nameInput" maxlength="30" placeholder="Enter your name" />
 
             <h1>Font:</h1>
             <select id="fontSelect">
