--- a/files/sereiteiTitles.html
+++ b/files/sereiteiTitles.html
@@ -15,7 +15,7 @@
         <a href="../home.html"><h1>Back</h1></a>
         <form>
             <h1>Enter Your Name: </h1>
-            <input type="text" id="nameInput" placeholder="Enter your name" />
+            <input type="text" id="nameInput" maxlength="30" placeholder="Enter your name" />
             
             <h1>Font:</h1>
             <select id="fontSelect">
@@ -33,7 +33,7 @@
 
             <div id="royalFamilyContainer" style="display: none;">
                 <label for="generationInput"><h1>Generation:</h1></label>
-                <input type="number" id="generationInput" min="1" placeholder="Enter Generation">
+                <input type="number" id="generationInput" min="1" max="999" placeholder="Enter Generation">
                 
                 <label for="clanNameSelect"><h1>Clan Name:</h1></label>
                 <select id="clanNameSelect">
