reverted limiter in clan generations

--- a/files/sereiteiTitles.html
+++ b/files/sereiteiTitles.html
@@ -33,7 +33,7 @@
 
             <div id="royalFamilyContainer" style="display: none;">
                 <label for="generationInput"><h1>Generation:</h1></label>
-                <input type="number" id="generationInput" min="1" max="999" placeholder="Enter Generation">
+                <input type="number" id="generationInput" min="1" placeholder="Enter Generation">
                 
                 <label for="clanNameSelect"><h1>Clan Name:</h1></label>
                 <select id="clanNameSelect">
