fullbringer title stuff

--- a/files/fullbringTitles.html
+++ b/files/fullbringTitles.html
@@ -34,6 +34,8 @@
                 <h1>Select Custodes rank:</h1>
                 <select id="custodesRankSelect">
                     <option value="[主の剣] Gladius Domini">[主の剣] Gladius Domini</option>
+                    <option value="[ 土 ] Custos Sordium">[ 土 ] Custos Sordium</option>
+                    <option value="[ 岩 ] Custos Petrae">[ 岩 ] Custos Petrae</option>
                     <option value="[ 日 ] Custos Solis">[ 日 ] Custos Solis</option>
                     <option value="[ 月 ] Custos Luna">[ 月 ] Custos Luna</optiovenn>
                     <option value="[ 空 ] Custos Aeris">[ 空 ] Custos Aeris</option>
@@ -48,10 +50,11 @@
             <div id="dominusContainer" style="display: none;">
                 <h1>Choose Dominus Rank:</h1>
                 <select id="dominusSelect">
-                    <option value="[ 星の主 ] Dominus Stellarum">[ 星の主 ] Dominus Stellarum</option>
-                    <option value="[ 風の主 ] Dominus Ventus">[ 風の主 ] Dominus Ventus</option>
-                    <option value="[ 海の主 ] Dominus Maria">[ 海の主 ] Dominus Maria</option>
-                    <option value="[ 灰の主 ] Dominus Cineris">[ 灰の主 ] Dominus Cineris</option>
+                    <option value="Dominus Terrae">[ 地球の主 ] Dominus Terrae</option>
+                    <option value="Dominus Stellarum">[ 星の主 ] Dominus Stellarum</option>
+                    <option value="Dominus Ventus">[ 風の主 ] Dominus Ventus</option>
+                    <option value="Dominus Maria">[ 海の主 ] Dominus Maria</option>
+                    <option value="Dominus Cineris">[ 灰の主 ] Dominus Cineris</option>
                 </select>
             </div>
             
