--- a/files/wandenTitles.html
+++ b/files/wandenTitles.html
@@ -92,6 +92,7 @@
             <div id="komContainer" style="display: none;">
                 <h1>Choose Kommandant Rank:</h1>
                 <select id="komSelect">
+                    <option value="Der Freischütz">Der Freischütz</option>
                     <option value="Der Kriegsherr">Der Kriegsherr</option>
                     <option value="Der Blutrichter">Der Blutrichter</option>
                     <option value="Der Schattenfürst">Der Schattenfürst</option>
