updated hell title names

--- a/files/hellTitles.html
+++ b/files/hellTitles.html
@@ -25,46 +25,43 @@
             <h1>Select Rank:</h1>
             <select id="rankSelect">
                 <option value="monarch">Monarch</option>
-                <option value="archon">Archon</option>
-                <option value="viscount">Viscount</option>
+                <option value="archon">Sin</option>
+                <option value="viscount">Hound</option>
             </select>
 
             <div id="archonContainer" style="display: none;">
-                <h1>Select Archon rank:</h1>
+                <h1>Select Sin rank:</h1>
                 <select id="archonRankSelect">
-                    <option value="Archon of Tyranny">Archon of Tyranny</option>
-                    <option value="Archon of Flesh and Blood">Archon of Flesh and Blood</option>
-                    <option value="Archon of Shattered Skies">Archon of Shattered Skies</option>
-                    <option value="Archon of The Pale Ember">Archon of The Pale Ember</option>
-                    <option value="Archon of The First Spark">Archon of The First Spark</option>
-                    <option value="Archon of The Territorial Maw">Archon of The Territorial Maw</option>
-                    <option value="Archon of The Frozen Veil">Archon of The Frozen Veil</option>
-                    <option value="Archon of The Forge">Archon of The Forge</option>
+                    <!-- <option value="Archon of Tyranny">Archon of Tyranny</option> -->
+                    <option value="Sin of Pride">Sin of Pride</option>
+                    <option value="Sin of Wrath">Sin of Wrath</option>
+                    <option value="Sin of Greed">Sin of Greed</option>
+                    <option value="Sin of Lust">Sin of Lust</option>
+                    <option value="Sin of Envy">Sin of Envy</option>
+                    <option value="Sin of Sloth">Sin of Sloth</option>
+                    <option value="Sin of Gluttony">Sin of Gluttony</option>
                 </select>
             </div>
 
             <div id="monarchContainer" style="display: none;">
                 <h1>Choose Monarch Rank:</h1>
                 <select id="monarchSelect">
-                    <option value="Monarch of Shadows">Monarch of Shadows</option>
-                    <option value="Monarch of Transfiguration">Monarch of Transfiguration</option>
+                    <option value="Monarch of the Fallen">Monarch of the Fallen</option>
                     <option value="Monarch of Destruction">Monarch of Destruction</option>
-                    <option value="Monarch of The White Flames">Monarch of The White Flames</option>
-                    <option value="Monarch of The Beginning">Monarch of The Beginning</option>
-                    <option value="Monarch of The Iron Body">Monarch of The Iron Body</option>
+                    <option value="Monarch of Chaos">Monarch of Chaos</option>
                 </select>
             </div>
             
             <div id="viscountContainer" style="display: none;">
                 <h1>Choose Viscount Rank:</h1>
                 <select id="viscountSelect">
-                    <option value="Viscount of The Shifting Flesh">Viscount of The Shifting Flesh</option>
-                    <option value="Viscount of The Wasted Horizon">Viscount of The Wasted Horizon</option>
-                    <option value="Viscount of Embers Tone">Viscount of Embers Tone</option>
-                    <option value="Viscount of The Shaping Hand">Viscount of The Shaping Hand</option>
-                    <option value="Viscount of The Mawfangs' Bound">Viscount of The Mawfangs' Bound</option>
-                    <option value="Viscount of The Glacial Ensign">Viscount of The Glacial Ensign</option>
-                    <option value="Viscount of The Steels Hammer">Viscount of The Steels Hammer</option>
+                    <option value="Hound of Pride">Hound of Pride</option>
+                    <option value="Hound of Wrath">Hound of Wrath</option>
+                    <option value="Hound of Greed">Hound of Greed</option>
+                    <option value="Hound of Lust">Hound of Lust</option>
+                    <option value="Hound of Envy">Hound of Envy</option>
+                    <option value="Hound of Sloth">Hound of Sloth</option>
+                    <option value="Hound of Gluttony">Hound of Gluttony</option>
                 </select>
             </div>
 
