--- a/files/hellTitles.html
+++ b/files/hellTitles.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -32,8 +32,8 @@
             <div id="archonContainer" style="display: none;">
                 <h1>Select Sin rank:</h1>
                 <select id="archonRankSelect">
-                    <!-- <option value="Archon of Tyranny">Archon of Tyranny</option> -->
-                    <option value="Sin of Pride">Sin of Pride</option>
+                     <option value="Archon of Tyranny">Archon of Tyranny</option> -->
+                    <!-- <option value="Sin of Pride">Sin of Pride</option>
                     <option value="Sin of Wrath">Sin of Wrath</option>
                     <option value="Sin of Greed">Sin of Greed</option>
                     <option value="Sin of Lust">Sin of Lust</option>
@@ -81,4 +81,4 @@
     <script src="./hellScripts.js"></script>
 
 </body>
-</html>
+</html> --> 
