--- a/home.html
+++ b/home.html
@@ -39,11 +39,11 @@
                 </div>
             </a>
             
-            <a href="./files/hellTitles.html" style="text-decoration: none; color: inherit;">
+            <!-- <a href="./files/hellTitles.html" style="text-decoration: none; color: inherit;">
                 <div class="factionSelectButton">
                     <img src="./files/images/hellLogo.png" alt="Faction" />
                 </div>
-            </a>
+            </a> -->
 
         </div>
     </div>
