disabled royal family captains

--- a/files/sereiteiTitles.html
+++ b/files/sereiteiTitles.html
@@ -44,8 +44,8 @@
                     <option value="Shiba">Shiba</option>
                 </select>
             
-                <label for="royalFamilyCaptain"><h1>Captain</h1></label>
-                <input type="checkbox" id="royalFamilyCaptain">
+                <!-- <label for="royalFamilyCaptain"><h1>Captain</h1></label> -->
+                <!-- <input type="checkbox" id="royalFamilyCaptain"> -->
             </div>
 
             <div id="vizardRankContainer" style="display: none;">
