added hollow kings blade

--- a/files/huecoTitles.html
+++ b/files/huecoTitles.html
@@ -49,6 +49,7 @@
             <div id="fantasiaContainer" style="display: none;">
                 <h1>Choose Espada De Fantasia Rank:</h1>
                 <select id="fantasiaSelect">
+                    <option value="Blade">The Hollow King's Blade</option>
                     <option value="Asun">Fantasia De Asun</option>
                     <option value="Tiem">Fantasia De Tiem</option>
                     <option value="Gravi">Fantasia De Gravi</option>
